Dashboard.js implemented (Backend and Frontend). Added small chaneges on Login.js and Register.js